--- a/package.json
+++ b/package.json
@@ -53,58 +53,68 @@
     "drizzle-orm": "^0.39.3",
     "drizzle-zod": "^0.7.1",
     "embla-carousel-react": "^8.5.2",
-    "express": "^4.21.2",
-    "express-session": "^1.18.1",
+    "express": "^4.21.2", 
+    "express-session": "^1.18.1", 
     "framer-motion": "^11.18.2",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.453.0",
-    "memorystore": "^1.6.7",
+    "memorystore": "^1.6.7", 
     "next": "^15.2.4",
-    "passport": "^0.7.0",
-    "passport-local": "^1.0.0",
-    "pg": "^8.14.1",
-    "react": "^19.1.0",
+    "passport": "^0.7.0", 
+    "passport-local": "^1.0.0", 
+    "pg": "^8.14.1", 
+    "react": "^18.3.1", 
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.1.0",
+    "react-dom": "^18.3.1", 
     "react-hook-form": "^7.55.0",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-animate": "^1.0.7", 
     "vaul": "^1.1.2",
-    "wouter": "^3.6.0",
-    "ws": "^8.18.1",
+    "wouter": "^3.6.0", 
+    "ws": "^8.18.1", 
     "zod": "^3.24.2",
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
-    "@replit/vite-plugin-cartographer": "^0.0.11",
-    "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
+    "@replit/vite-plugin-cartographer": "^0.0.11", 
+    "@replit/vite-plugin-runtime-error-modal": "^0.0.3", 
     "@tailwindcss/postcss": "^4.1.2",
     "@tailwindcss/typography": "^0.5.16",
-    "@types/connect-pg-simple": "^7.0.3",
-    "@types/express": "^4.17.21",
-    "@types/express-session": "^1.18.0",
+    "@types/connect-pg-simple": "^7.0.3", 
+    "@types/express": "^4.17.21", 
+    "@types/express-session": "^1.18.0", 
     "@types/node": "^20.16.11",
-    "@types/passport": "^1.0.17",
-    "@types/passport-local": "^1.0.38",
+    "@types/passport": "^1.0.17", 
+    "@types/passport-local": "^1.0.38", 
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
-    "@types/ws": "^8.18.1",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@types/ws": "^8.18.1", 
+    "@vitejs/plugin-react": "^4.3.4", 
     "drizzle-kit": "^0.30.6",
     "esbuild": "^0.25.2",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.2",
-    "tsx": "^4.19.3",
+    "tsx": "^4.19.3", 
     "typescript": "^5.6.3",
-    "vite": "^5.4.17"
+    "vite": "^5.4.17" 
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.9"
+  },
+  "overrides": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "pnpm": {
+    "overrides": {
+      "react": "^18.3.1",
+      "react-dom": "^18.3.1"
+    }
   }
 }
