--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "drizzle-orm": "^0.41.0",
     "drizzle-zod": "^0.7.1",
     "embla-carousel-react": "^8.6.0",
-    "express": "^5.1.0",
     "express-session": "^1.18.1",
     "framer-motion": "^12.6.3",
     "i18next": "^24.2.3",
@@ -65,9 +64,9 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.14.1",
-    "react": "^19.1.0",
+    "react": "19.0.0-rc.1",
     "react-day-picker": "^9.6.4",
-    "react-dom": "^19.1.0",
+    "react-dom": "19.0.0-rc.1",
     "react-hook-form": "^7.55.0",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
@@ -87,15 +86,13 @@
     "@tailwindcss/postcss": "^4.1.3",
     "@tailwindcss/typography": "^0.5.16",
     "@types/connect-pg-simple": "^7.0.3",
-    "@types/express": "^5.0.1",
     "@types/express-session": "^1.18.1",
-    "@types/node": "^22.14.0",
+    "@types/node": "^20.16.11",
     "@types/passport": "^1.0.17",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
     "@types/ws": "^8.18.1",
-    "@vitejs/plugin-react": "^4.3.4",
     "drizzle-kit": "^0.30.6",
     "esbuild": "^0.25.2",
     "eslint": "^9.24.0",
@@ -103,16 +100,12 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.3",
     "tsx": "^4.19.3",
-    "typescript": "^5.8.3",
-    "vite": "^6.2.5"
+    "typescript": "^5.6.3"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.9"
   },
-  "overrides": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
+  "overrides": {},
   "pnpm": {
     "overrides": {
       "react": "^18.3.1",
