--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
-    "@jridgewell/trace-mapping": "^0.3.25",
+    "@jridgewell/trace-mapping": "^0.3.25", 
     "@neondatabase/serverless": "^1.0.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -43,8 +43,8 @@
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
-    "@tanstack/react-query": "^5.71.10",
-    "@types/pg": "^8.11.11",
+    "@tanstack/react-query": "^5.71.10", 
+    "@types/pg": "^8.11.11", 
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -65,19 +65,19 @@
     "passport-local": "^1.0.0",
     "pg": "^8.14.1",
     "react": "19.0.0-rc.1",
-    "react-day-picker": "^9.6.4",
-    "react-dom": "19.0.0-rc.1",
-    "react-hook-form": "^7.55.0",
+    "react-day-picker": "^8.10.1", 
+    "react-dom": "19.0.0-rc.1", 
+    "react-hook-form": "^7.55.0", 
     "react-i18next": "^15.4.1",
-    "react-icons": "^5.5.0",
+    "react-icons": "^5.5.0", 
     "react-resizable-panels": "^2.1.7",
-    "recharts": "^2.15.2",
-    "tailwind-merge": "^3.1.0",
-    "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.1.2",
-    "wouter": "^3.6.0",
-    "ws": "^8.18.1",
-    "zod": "^3.24.2",
+    "recharts": "^2.15.2", 
+    "tailwind-merge": "^3.1.0",       
+    "tailwindcss-animate": "^1.0.7", 
+    "vaul": "^1.1.2", 
+    "wouter": "^3.6.0", 
+    "ws": "^8.18.1", 
+    "zod": "^3.24.2", 
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
@@ -95,12 +95,12 @@
     "@types/ws": "^8.18.1",
     "drizzle-kit": "^0.30.6",
     "esbuild": "^0.25.2",
-    "eslint": "^9.24.0",
+    "eslint": "^9.24.0", 
     "eslint-config-next": "^15.2.4",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.3",
-    "tsx": "^4.19.3",
-    "typescript": "^5.6.3"
+    "postcss": "^8.5.3",               
+    "tailwindcss": "^4.1.3",         
+    "tsx": "^4.19.3", 
+    "typescript": "^5.6.3"          
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.9"
@@ -108,8 +108,7 @@
   "overrides": {},
   "pnpm": {
     "overrides": {
-      "react": "^18.3.1",
-      "react-dom": "^18.3.1"
+      "react-is": "19.0.0-rc.1"
     }
   }
 }
