--- a/package.json
+++ b/package.json
@@ -70,15 +70,21 @@
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^15.2.4",
     "@tailwindcss/postcss": "^4.1.3",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20.16.11",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
     "@types/ws": "^8.18.1",
+    "@typescript-eslint/eslint-plugin": "^8.29.0",
+    "@typescript-eslint/parser": "^8.29.0",
     "esbuild": "^0.25.2",
     "eslint": "^9.24.0",
     "eslint-config-next": "^15.2.4",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.3",
     "tsx": "^4.19.3",
