--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack/react-query": "^5.71.10",
-    "babel-plugin-react-compiler": "19.0.0-beta-e993439-20250328",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -52,10 +51,10 @@
     "i18next-browser-languagedetector": "^8.0.4",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.487.0",
-    "next": "^15.2.4",
-    "react": "19.0.0-rc.1",
+    "next": "^14.2.0",
+    "react": "^18.3.1",
     "react-day-picker": "^9.6.4",
-    "react-dom": "19.0.0-rc.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
@@ -70,33 +69,30 @@
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^15.2.4",
+    "@next/eslint-plugin-next": "^14.2.0", 
     "@tailwindcss/postcss": "^4.1.3",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20.16.11",
-    "@types/react": "^19.1.0",
-    "@types/react-dom": "^19.1.1",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
     "@types/ws": "^8.18.1",
-    "@typescript-eslint/eslint-plugin": "^8.29.0",
-    "@typescript-eslint/parser": "^8.29.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
     "esbuild": "^0.25.2",
-    "eslint": "^9.24.0",
-    "eslint-config-next": "^15.2.4",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "globals": "^16.0.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.0",
+    "eslint-plugin-react": "^7.34.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "globals": "^15.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.3",
     "tsx": "^4.19.3",
-    "typescript": "^5.6.3"
+    "typescript": "^5.4.0"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.9"
   },
   "overrides": {},
   "pnpm": {
-    "overrides": {
-      "react-is": "19.0.0-rc.1"
-    }
   }
 }
